# ML_Project_Development

./: app.py  application.py  pyproject.toml  requirements.txt
.github/workflows/: main_studentproject.yml
artifacts/: preprocessor.pkl
notebook/: 2. MODEL TRAINING.ipynb
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_training.py
src/pipeline/: predict_pipeline.py
