[build-system]

requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[project]
name = "ML_Project_Development"
version = "0.0.0"
description = "A machine learning project for me"


dependencies = [
    "numpy",
    "pandas",
    "seaborn",
    "scikit-learn",
    "dill"
]
[tool.setuptools.dynamic]